Remove NSR Authority (#84)